--- a/scripts/install
+++ b/scripts/install
@@ -29,7 +29,7 @@ admin=$YNH_APP_ARG_ADMIN
 is_public=$YNH_APP_ARG_IS_PUBLIC
 language=$YNH_APP_ARG_LANGUAGE
 random_key=$(ynh_string_random --length=32)
-email=$(ynh_user_get_info $admin 'mail')
+email=$(ynh_user_get_info --username=$admin --key=mail)
 password=$YNH_APP_ARG_PASSWORD
 dav_support=$YNH_APP_ARG_DAV_SUPPORT
 signup=$YNH_APP_ARG_SIGNUP
