--- a/scripts/install
+++ b/scripts/install
@@ -11,7 +11,6 @@ source ynh_composer__2
 source send_readme_to_admin
 source /usr/share/yunohost/helpers
 
-
 #=================================================
 # MANAGE SCRIPT FAILURE
 #=================================================
@@ -133,14 +132,13 @@ ynh_script_progression --message="Modifying a config file..."
 config="$final_path/.env"
 cp ../conf/.env "$config"
 
-ynh_replace_string --match_string="__DOMAIN__" --replace_string="$domain" --target_file="$config"
-ynh_replace_string --match_string="random_key" --replace_string="$random_key" --target_file="$config"
-ynh_replace_string --match_string="yunouser" --replace_string="$db_name" --target_file="$config"
-ynh_replace_string --match_string="yunopass" --replace_string="$db_pwd" --target_file="$config"
-ynh_replace_string --match_string="yunobase" --replace_string="$db_name" --target_file="$config"
-ynh_replace_string --match_string="yunomail" --replace_string="$email" --target_file="$config"
-ynh_replace_string --match_string="yunodomain" --replace_string="$domain" --target_file="$config"
-ynh_replace_string --match_string="language" --replace_string="$language" --target_file="$config"
+ynh_replace_string --match_string="__DOMAIN__"   --replace_string="$domain"     --target_file="$config"
+ynh_replace_string --match_string="random_key"   --replace_string="$random_key" --target_file="$config"
+ynh_replace_string --match_string="__DB_PWD__"   --replace_string="$db_pwd"     --target_file="$config"
+ynh_replace_string --match_string="__DB_NAME__"  --replace_string="$db_name"    --target_file="$config"
+ynh_replace_string --match_string="__EMAIL__"    --replace_string="$email"      --target_file="$config"
+ynh_replace_string --match_string="__LANGUAGE__" --replace_string="$language"   --target_file="$config"
+
 # Enable or disable DAV support for users
 if [ $dav_support -eq 0 ]
 then
@@ -196,6 +194,7 @@ pushd $final_path
 	php$phpversion artisan key:generate
 	php$phpversion artisan setup:production --email=$email --password=$password -v
 popd
+
 #=================================================
 # STORE THE CONFIG FILE CHECKSUM
 #=================================================
